=head1 NAME

Changes - Apache::Test change logfile

=head1 CHANGES

=over 3

=item 1.21-dev

add Apache::TestHarnessPHP which allows for running client-side
scripts via php instead of perl.  [Geoffrey Young]




=item 1.20 - January 22, 2005

instead of trying to match various custom server name variations (each
vendor seems to replace "Apache" in 'httpd -v' with their own name),
just try to match the "/x.y" in "Foo-Apache-Bar/x.y.z" to figure out
the server generation (rev). [Stas]

extend Apache::TestConfig::which() to search under perl's bin
directory (in the case of local perl install many utils get installed
there, but won't be in PATH). [Stas]

Apache::TestConfig::inherit_load_module handles .dll modules
(previously was only .so) [Stas]

Apache::TestConfig::should_skip_module now works with regex
patterns. [Stas]



=item 1.19 - January 5, 2005

Test for module.c instead of module.so for IfModule in
find_and_load_module [Chia-Liang Kao <chialiang gmail.com>]

Apache-Test/META.yml is excluded from mp2 distro to make PAUSE indexer
happy, but then perl Makefile.PL complains about a missing META.yml,
so autogenerate it if it wasn't in the distro [Stas]



=item 1.18 - December 23, 2004

fix a bug in A-T config generation, when a vhost entry was in
autogenerated httpd.conf (e.g. coming from .pm file) and another from
extra.conf.in. We used to have a ports collision, since extra.conf
wasn't reparsed and the same port was getting assigned to more than
one vhost entry, preventing server startup:
  default_ VirtualHost overlap on port 8530, the first has precedence
  (98)Address already in use: make_sock: could not bind to address
  0.0.0.0:8530 no listening sockets available, shutting down
could be reproduced with t/TEST -conf followed by t/TEST -maxclients 1
in the mp2 test suite (or the new Apache-TestMe test suite, which now
includes a special setup for this bug). [Stas]

new TestConfig wrapper find_and_load_module [Chia-Liang Kao <chialiang
gmail.com>]
