@@ -8,6 +8,9 @@ Changes - Apache::Test change logfile
 
 =item 1.21-dev
 
+Apache::TestConfig::untaint_path needs to remove empty entries in the
+PATH list, since -T considers those tainted too. [Stas]
+
 add Apache::TestHarnessPHP which allows for running client-side
 scripts via php instead of perl.  [Geoffrey Young]
 
